@@ -239,7 +239,16 @@ static void
 http_request_done(struct http_request *request, CURLcode result, long status)
 {
 	/* invoke the handler method */
-	if (result != CURLE_OK) {
+
+	if (result == CURLE_WRITE_ERROR &&
+	    /* handle the postponed error that was caught in
+	       http_request_writefunction() */
+	    request->body->len > MAX_RESPONSE_BODY) {
+		GError *error =
+			g_error_new_literal(curl_quark(), 0,
+					    "response body is too large");
+		request->handler->error(error, request->handler_ctx);
+	} else if (result != CURLE_OK) {
 		GError *error = g_error_new(curl_quark(), result,
 					    "curl failed: %s",
 					    request->error);
@@ -462,13 +471,9 @@ http_request_writefunction(void *ptr, size_t size, size_t nmemb, void *stream)
 
 	g_string_append_len(request->body, ptr, size * nmemb);
 
-	if (request->body->len > MAX_RESPONSE_BODY) {
+	if (request->body->len > MAX_RESPONSE_BODY)
 		/* response body too large */
-		GError *error =
-			g_error_new_literal(curl_quark(), 0,
-					    "response body is too large");
-		http_request_abort(request, error);
-	}
+		return 0;
 
 	return size * nmemb;
 }
